--- a/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
+++ b/src/XelsDesktopWalletApp/Views/layout/MainLayout.xaml
@@ -98,7 +98,7 @@
 
         <Grid Grid.Column="1" Grid.Row="1" Background="#FFCFCFCF">
             <ScrollViewer>
-                <Frame x:Name="PageContent" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="560" Width="880"></Frame>
+                <Frame x:Name="PageContent" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="560" Width="880" NavigationUIVisibility="Hidden"></Frame>
 
             </ScrollViewer>
         </Grid>
@@ -135,7 +135,7 @@
                     </Grid>
                 </Button>
 
-                <Button Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C">
+                <Button Margin="10" Background="#FF41A43C" BorderBrush="#FF41A43C" Click="btnHistory_Click">
                     <Grid Width="150">
                         <materialDesign:PackIcon Kind="History" VerticalAlignment="Center"/>
                         <TextBlock HorizontalAlignment="Center" Text="HISTORY" FontFamily="Champagne &amp; Limousines"/>
