--- a/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="XelsDesktopWalletApp.Views.CreateOrRestore"
+﻿<Page x:Class="XelsDesktopWalletApp.Views.CreateOrRestore"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -79,4 +79,4 @@
     </StackPanel>
     
     <!--</Border>-->
-</Window>
+</Page>
